Name:                urllogs
Version:             0.0.1
Synopsis:            Parse squid and ipoque logfiles
-- Description:         
License:             GPL-3
License-file:        LICENSE
Author:              Arthur Clune
Maintainer:          arthur@clune.org
Copyright:           Arthur Clune 2012
Category:            Testing
Build-type:          Simple
-- Extra-source-files:  
Cabal-version:       >=1.10

flag optimize
  description: Enable optimizations
  default:     True

Library
    Exposed-Modules: URLAlert.IpoqueLog, URLAlert.SquidLog, URLAlert.Types
    hs-source-dirs: lib
    default-language:    Haskell98
    Other-modules:   URLAlert.Utils
    Build-depends:   base, bytestring, attoparsec, zlib
    ghc-options: -Wall
    if flag(optimize)
        ghc-options: -O2 -funfolding-use-threshold=16 -optc-O3 -optc-ffast-math -funbox-strict-fields -fdicts-cheap -fspec-constr 

Executable urllogs
  Main-is: urllogs.hs
  hs-source-dirs: src
  default-language:    Haskell2010
  Build-depends: base, bytestring, safe, unordered-containers, urllogs
  ghc-options: -Wall
  if flag(optimize)
    ghc-options: -O2 -funfolding-use-threshold=16 -optc-O3 -optc-ffast-math -funbox-strict-fields -fdicts-cheap -fspec-constr -rtsopts

Executable run-ipoque-tests
  Main-is: IpoqueLogTests.hs
  default-language:    Haskell2010
  hs-source-dirs: tests
  Build-depends: base, bytestring, HUnit, urllogs

Executable run-squid-tests
  Main-is: SquidLogTests.hs
  default-language:    Haskell2010
  hs-source-dirs: tests
  Build-depends: base, HUnit, urllogs
