Name:                urllogs
Version:             0.0.2
Synopsis:            Parse squid logfiles
Description:         Simple code written using attoparsec and conduits to parse logfiles
License:             GPL-3
License-file:        LICENSE
Author:              Arthur Clune
Maintainer:          arthur@clune.org
Copyright:           Arthur Clune 2012
Category:            Testing
Build-type:          Simple
Cabal-version:       >=1.14

source-repository head
  type:  git
  location: https://github.com/ArthurClune/haskell-urllogs.git

flag optimize
  description: Enable optimizations
  default:     True

Library
    Exposed-Modules:  URLLogs.SquidLog, URLLogs.Types
    hs-source-dirs:   lib
    default-language: Haskell2010
    Build-depends:    attoparsec, base, bytestring, zlib
    ghc-options:      -Wall
    if flag(optimize)
        ghc-options:  -O2 -funbox-strict-fields -fdicts-cheap -fspec-constr

Executable urllogs
  Main-is:          urllogs.hs
  hs-source-dirs:   src
  default-language: Haskell2010
  Build-depends:    attoparsec, base, bytestring, conduit, safe, unordered-containers,
                    urllogs, zlib-conduit
  ghc-options:      -Wall
  if flag(optimize)
    ghc-options:    -O2 -funbox-strict-fields -fdicts-cheap -fspec-constr -rtsopts

Test-suite squid-tests
  Type:              exitcode-stdio-1.0
  Main-is:           SquidLogTests.hs
  default-language:  Haskell2010
  hs-source-dirs:    tests
  Build-depends:     attoparsec, base, bytestring, HUnit, urllogs
